--- a/src/styles/petition.module.css
+++ b/src/styles/petition.module.css
@@ -15,14 +15,9 @@
   font-family: var(--font-mono);
 }
 
-.list {
-  li {
-    list-style-position: inside;
-    padding: 0.5em;
-    &:nth-child(odd) {
-      background-color: var(--gray-2);
-    }
-  }
+.list li {
+  list-style-position: inside;
+  padding: 0.5em;
 }
 
 .pagination {
@@ -32,7 +27,7 @@
   gap: 1em;
   text-transform: uppercase;
   font-family: var(--font-mono);
-  a {
-    text-decoration: none;
-  }
+}
+.pagination a {
+  text-decoration: none;
 }
