--- a/src/styles/app.module.css
+++ b/src/styles/app.module.css
@@ -24,13 +24,6 @@
   font-size: 1.2rem;
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
-}
-
 .card {
   max-width: 100%;
   padding: 1rem;
@@ -58,6 +51,11 @@
   font-size: 0.9rem;
   line-height: 1.5;
   text-wrap: balance;
+}
+
+.flexRow {
+  display: flex;
+  gap: 0.6rem;
 }
 
 .form {
@@ -132,11 +130,6 @@
     padding: 4rem;
   }
 
-  .grid {
-    grid-template-columns: 1fr;
-    max-width: 320px;
-  }
-
   .center {
     padding: 8rem 0 6rem;
   }
@@ -144,13 +137,6 @@
   .center::before {
     transform: none;
     height: 300px;
-  }
-}
-
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
   }
 }
 
