--- a/src/styles/app.module.css
+++ b/src/styles/app.module.css
@@ -23,6 +23,9 @@
 .description h2 {
   font-size: 1.2rem;
 }
+.description h3 {
+  font-size: 1rem;
+}
 
 .card {
   max-width: 100%;
@@ -74,36 +77,27 @@
   gap: 0.5rem;
 }
 
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
+.dList dt {
+  font-weight: bold;
+}
+.dList dd {
+  margin-bottom: 1rem;
 }
 
-.center::before {
-  background: var(--secondary-glow);
+.spinner {
+  width: 1rem;
+  height: 1rem;
   border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
+  border: 3px solid;
+  border-color: #dedede;
+  border-right-color: #000000;
+  animation: spinner-d3wgkg 1s infinite linear;
 }
 
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+@keyframes spinner-d3wgkg {
+  to {
+    transform: rotate(1turn);
+  }
 }
 
 /* Enable hover only on non-touch devices */
@@ -124,22 +118,6 @@
   }
 }
 
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-}
-
 @media (prefers-color-scheme: dark) {
   .vercelLogo {
     filter: invert(1);
@@ -147,14 +125,5 @@
 
   .logo {
     filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
   }
 }
